--- a/views/bootstrap-demo/login.ejs
+++ b/views/bootstrap-demo/login.ejs
@@ -9,6 +9,12 @@
    </head>
   <body>
         <%-include('header'); %>  
+        <% if(isRegistrationSuccess){ %>
+        <div class="alert alert-success">
+           User registered successfully.
+        </div>
+        <%}%>
+
         <div class="wrapper fadeInDown">
             <div id="formContent">
               <!-- Tabs Titles -->
@@ -28,6 +34,9 @@
               <!-- Remind Passowrd -->
               <div id="formFooter">
                 <a class="underlineHover" href="#">Forgot Password?</a>
+              </div>
+              <div id="formFooter">
+                <a class="underlineHover" href="/secured/register">Register New User</a>
               </div>
           
             </div>
