--- a/views/bootstrap-demo/register.ejs
+++ b/views/bootstrap-demo/register.ejs
@@ -2,15 +2,18 @@
 <html>
   <head>
     <title>Login</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/styles/register.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-   </head>
+  </head>
   <body>
-        <%-include('header'); %>  
-        <form method="POST" action="/secured/register">
-          <button>Register</button>
-        </form>
+    <%-include('header'); %>
+    <form method="POST" action="/secured/register">
+      <%-include('templates/register'); %>
+    </form>
   </body>
 </html>
